# tiny-serial

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  MILESTONES.md  README.md  index.d.ts  index.js  instructions.md  package.json  serial.js  tsconfig.build.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: bun-compat.test.ts  index.spec.ts  mock.spec.ts  native.spec.ts  parsers.spec.ts  serialport.spec.ts
benchmark/: bench.ts
lib/: SerialPort.ts  index.ts  types.ts
lib/mock/: MockSerialPort.ts
lib/parsers/: ByteLengthParser.ts  InterByteTimeoutParser.ts  ReadlineParser.ts  RegexParser.ts
scripts/: check-native.js  test-hardware.sh
src/: lib.rs
