
[package]
authors = ["Maximilian Hans <main@i-like-robots.com>"]
edition = "2021"
name = "tiny-serial"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async", "napi4"] }
napi-derive = "3.0.0"

[target.'cfg(not(target_env = "musl"))'.dependencies]
serialport = "4.5"

[target.'cfg(target_env = "musl")'.dependencies]
serialport = { version = "4.5", default-features = false }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
